tests/kulezi_tests/bad/invalid_op035.lat
int main() {
    false || "1";
    return 0;
}